--- a/boleta.html
+++ b/boleta.html
@@ -56,8 +56,8 @@
     />
       <div class="encabezadoOtros">
           <h3 id="fecha">Fecha:</h3>
-          <h3 id="usuario">Usuario:</h3>
-        </div>
+          <h3 id="usuario">Usuario:</h3>      
+      </div>
         
     </div>
     
@@ -67,9 +67,9 @@
     <div class="turnoRecibo">
         <table>
           <tr id="tablaTurnos">
-            <td>Turno</td>
             <td>Fecha</td>
             <td>Horario</td>
+            <td>Tiempo estimado</td>
           </tr>
           <tr id="datosTurno">
           </tr>
@@ -85,7 +85,7 @@
           <tr id="tablaTurnos">
             <td>Cantidad</td>
             <td>Servicio</td>
-            <td>Precio</td>
+            <td>Precio estimado</td>
           </tr>
           <tr id="datosRecibo">
           </tr>
