--- a/comprar.html
+++ b/comprar.html
@@ -100,8 +100,9 @@
       <div class="seccionSeleccionFecha"> </div>
       
       <div class="seccionCompraServicio">
-        <div>
+        <div class="ajax">
           <h2 id="solicitar">SOLICITAR UN SERVICIO</h2>
+          <p id="ajax"></p>
         <div class="compraServicio">
           <div>
               <h3>Logistica</h3>
@@ -130,8 +131,6 @@
                 <p id="Otros2">Cantidad: 0 </p>
                 <p id="precioOtros"></p>
             </div>
-            <p id="ajax"></p>
-
         </div>
     </div>
     </div>
